run the notebook on gpu

--- a/notebooks/get_saliency_maps_CAM.ipynb
+++ b/notebooks/get_saliency_maps_CAM.ipynb
@@ -165,6 +165,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model.cuda()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,15 +243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Id of the video sample = 104152\n",
-      "True label --> 10 (Dropping something into something)\n"
+      "Id of the video sample = 174952\n",
+      "True label --> 145 (Stuffing something into something)\n"
      ]
     }
    ],
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,6 +274,15 @@
     "        input_var[idx] = torch.autograd.Variable(inp)\n",
     "else:\n",
     "    input_var = [torch.autograd.Variable(input_data)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_var = [e.cuda() for e in input_var]"
    ]
   },
   {
@@ -278,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted index chosen = 10 (Dropping something into something)\n",
+      "Predicted index chosen = 145 (Stuffing something into something)\n",
       "Shape of CAM mask produced = (60, 224, 224)\n"
      ]
     }
@@ -296,7 +314,7 @@
     "grad_cam = GradCamVideo(model=model,\n",
     "                   target_layer_names=[\"block5\"],\n",
     "                   class_dict=dict_two_way,\n",
-    "                   use_cuda=False,\n",
+    "                   use_cuda=True,\n",
     "                   input_spatial_size=config[\"input_spatial_size\"])\n",
     "input_to_model = input_var[0]\n",
     "mask, output = grad_cam(input_to_model, target_index)"
@@ -304,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,8 +331,8 @@
     "\n",
     "# compute top5 predictions\n",
     "pred_prob, pred_top5 = output.data.topk(5)\n",
-    "pred_prob = pred_prob.numpy()\n",
-    "pred_top5 = pred_top5.numpy()"
+    "pred_prob = pred_prob.cpu().numpy()\n",
+    "pred_top5 = pred_top5.cpu().numpy()"
    ]
   },
   {
@@ -340,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +427,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -442,13 +460,13 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"cam_saved_images/104152/combined/mygif.gif?759138117\">"
+       "<img src=\"cam_saved_images/174952/combined/mygif.gif?56080641\">"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,22 +478,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Id of the video sample = 104152\n",
-      "True label --> 10 (Dropping something into something)\n",
+      "Id of the video sample = 174952\n",
+      "True label --> 145 (Stuffing something into something)\n",
       "\n",
       "Top-5 Predictions:\n",
-      "Top 1 :== Dropping something into something. Prob := 78.48%\n",
-      "Top 2 :== Dropping something onto something. Prob := 11.61%\n",
-      "Top 3 :== Dropping something behind something. Prob := 2.42%\n",
-      "Top 4 :== Putting something into something. Prob := 1.77%\n",
-      "Top 5 :== Putting something onto something else that cannot support it so it falls down. Prob := 1.04%\n"
+      "Top 1 :== Stuffing something into something. Prob := 82.45%\n",
+      "Top 2 :== Putting something into something. Prob := 16.19%\n",
+      "Top 3 :== Putting something onto something. Prob := 0.20%\n",
+      "Top 4 :== Pretending to pick something up. Prob := 0.15%\n",
+      "Top 5 :== Pretending to open something without actually opening it. Prob := 0.15%\n"
      ]
     }
    ],
@@ -486,6 +504,13 @@
     "for i, pred in enumerate(pred_top5):\n",
     "    print(\"Top {} :== {}. Prob := {:.2f}%\".format(i + 1, dict_two_way[pred], pred_prob[i] * 100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -504,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
